--- a/HitFeedback/HitFeedback.csproj
+++ b/HitFeedback/HitFeedback.csproj
@@ -3,6 +3,19 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
+        <DuckovPath>D:\steam\steamapps\common\Escape from Duckov</DuckovPath>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <OutputPath>D:\steam\steamapps\common\Escape from Duckov\Duckov_Data\Mods\HitFeedback</OutputPath>
+        <GenerateDependencyFile>false</GenerateDependencyFile>
+        <DebugType>none</DebugType>
+    </PropertyGroup>
+    <ItemGroup>
+        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\TeamSoda.*" Private="False" />
+        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\ItemStatsSystem.dll" Private="False" />
+        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\Unity*" Private="False" />
+        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\FMODUnity.dll" Private="False" />
+    </ItemGroup>
 </Project>
