feat: 场景快照支持打印组件值

--- a/HideCharacter/HideCharacter.csproj
+++ b/HideCharacter/HideCharacter.csproj
@@ -49,4 +49,8 @@
         <PackageReference Include="Lib.Harmony" Version="2.4.1"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Api\" />
+    </ItemGroup>
 </Project>
